# pureflow

./: .deslop.toml  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  rust-toolchain.toml
.beads/: config.yaml  issues.jsonl  redirect
.gemini/: settings.json
.github/workflows/: ci.yml
acfs-agents/: README.md
acfs-agents/coding_agent_session_search/: AGENTS.md
acfs-agents/coding_agent_usage_tracker/: AGENTS.md
crates/pureflow/: Cargo.toml  README.md
crates/pureflow-cli/: Cargo.toml
crates/pureflow-cli/src/: main.rs
crates/pureflow-contract/: Cargo.toml
crates/pureflow-contract/src/: lib.rs  rules.rs
crates/pureflow-core/: Cargo.toml
crates/pureflow-core/benches/: metadata_overhead.rs
crates/pureflow-core/src/: batch.rs  capability.rs  context.rs  error.rs  lib.rs  lifecycle.rs  message.rs  metadata.rs  ports.rs
crates/pureflow-core/tests/: public_api_substrate.rs
crates/pureflow-engine/: Cargo.toml
crates/pureflow-engine/benches/: backpressure_capacity.rs
crates/pureflow-engine/examples/: ai_call_orchestration.rs  fanout_fanin.rs  feedback_loop.rs  replay_branch_eval.rs  rules_content_routing.rs  stream_join_window.rs  watcher_cancellation.rs
crates/pureflow-engine/src/: lib.rs
crates/pureflow-introspection/: Cargo.toml
crates/pureflow-introspection/src/: lib.rs  rules.rs
crates/pureflow-nodes-fs/: Cargo.toml
crates/pureflow-nodes-fs/src/: lib.rs
crates/pureflow-rules/: Cargo.toml
crates/pureflow-rules/src/: action.rs  condition.rs  error.rs  eval.rs  lib.rs  node.rs  rule.rs
crates/pureflow-runtime/: Cargo.toml
crates/pureflow-runtime/src/: lib.rs
crates/pureflow-test-kit/: Cargo.toml
crates/pureflow-test-kit/src/: lib.rs
crates/pureflow-types/: Cargo.toml
crates/pureflow-types/src/: lib.rs
crates/pureflow-wasm/: Cargo.toml
crates/pureflow-wasm/examples/: README.md  mixed_pipeline.rs
crates/pureflow-wasm/fixtures/: README.md
crates/pureflow-wasm/fixtures/rules-guest/: Cargo.toml
crates/pureflow-wasm/fixtures/rules-guest/src/: lib.rs
crates/pureflow-wasm/fixtures/uppercase-guest/: Cargo.toml  README.md
crates/pureflow-wasm/fixtures/uppercase-guest/src/: lib.rs
crates/pureflow-wasm/fixtures/uppercase-guest/testdata/: expected-outputs.json  inputs.json
crates/pureflow-wasm/src/: lib.rs  rules.rs  rules_node.rs
crates/pureflow-wasm/tests/: rules_wit.rs
crates/pureflow-wasm/wit/: pureflow-batch.wit  pureflow-rules.wit
crates/pureflow-workflow/: Cargo.toml
crates/pureflow-workflow-format/: Cargo.toml
crates/pureflow-workflow-format/src/: lib.rs  rule_source.rs
crates/pureflow-workflow/src/: lib.rs
crates/pureflow/src/: lib.rs
docs/: AGENTS.md  arrow-schema-compatibility-plan-2026-05-11.md  benchmark-baseline-2026-05-08.md  benchmark-operations.md  contract-capability-authoring.md  data-tier-pressure-review-2026-05-08.md  documentation-architecture.md  examples-catalog.md  handoff_2026-04-28.md  handoff_2026-04-29.md  handoff_2026-04-30.md  handoff_2026-05-06.md  handoff_2026-05-07.md  handoff_2026-05-11.md  handoff_2026-06-03.md  handoff_2026-06-04.md  metadata-json.md  node-authoring-error-patterns.md  package-metadata-audit-2026-05-09.md  release-notes-source-checkpoint-template.md  release-readiness.md  schema-generation.md  validation-matrix.md  workflow-run-guide.md
docs/archetecture/: crates-io-publishing-options.md  highland-labs-integration-proposal.md  proposal_1.md  proposal_2.md  proposal_final.md  proposal_structured_payloads.md  pureflow_proposal.md  rules-engine-handoff.md  rules-engine-proposal.md  wasm_example_nix_feature.json
docs/archetecture/strategy/: proposal_request.md
docs/architecture-guide/: _quarto.yml  diagrams-and-flows.qmd  index.qmd  index.tex  package-contracts.qmd  runtime-model.qmd  system-overview.qmd
docs/architecture-guide/_output/: diagrams-and-flows.html  index.html  package-contracts.html  runtime-model.html  search.json  system-overview.html
docs/architecture-guide/_output/site_libs/bootstrap/: bootstrap-d84f1af9771f194bf8b6c9c599b7c873.min.css
docs/architecture-guide/figures/: package-contracts-boundary.mmd  runtime-model-lifecycle.mmd  runtime-model-observability.mmd  system-overview-layered.mmd  system-overview-runtime-flow.mmd
docs/archive/: handoff_2026-04-24.md  handoff_2026-04-24_evening.md  handoff_2026-04-24_late.md  handoff_2026-04-26.md  handoff_2026-04-27.md
docs/audits/: Audit_2026_05_07.md  Audit_4_23.md  Audit_scope.md
docs/epics/: epic-1-foundation.md
docs/llm/: README.md  architecture-overview.md  contracts-and-boundaries.md  runtime-lifecycle.md  tooling-and-doc-generation.md
docs/questions/: 2026-04-27_contracts_core.md  2026-04-27_identifier_length_cap.md  2026-04-27_metadata_boundary.md  2026-04-28_wasm_batch_trait.md  2026-04-28_wasmtime_adapter_abi.md
docs/questions/responses/: 2026-04-27_contracts_core.md  2026-04-27_identifier_length_cap.md  2026-04-27_metadata_boundary.md  2026-04-28_wasm_batch_trait.md  2026-04-28_wasmtime_adapter_abi.md
examples/: native-linear-etl.md  native-linear-etl.workflow.json  wasm-uppercase.components.json  wasm-uppercase.md  wasm-uppercase.workflow.json
examples/authoring/: README.md  native-fanout.workflow.json  native-join.workflow.yaml  wasm-uppercase.components.json  wasm-uppercase.workflow.json
examples/workloads/: ai-call-orchestration.md  ai-call-orchestration.workflow.json  fanout-fanin.md  fanout-fanin.workflow.json  replay-branch-eval.md  replay-branch-eval.workflow.json  rules-content-routing.fast-path.rules.json  rules-content-routing.md  rules-content-routing.workflow.json  stream-join-window.md  stream-join-window.workflow.json  watcher-cancellation.md  watcher-cancellation.workflow.json
nix/devshell/: acfs.nix  agent-mail.nix  ai-tools.nix  android.nix  beads.nix  cargo-polylith.nix  core.nix  crane.nix  default.nix  direnv.nix  documentation.nix  flutter.nix  jujutsu.nix  native-cc.nix  ntm.nix  rinf.nix  rust-devtools.nix  rust-lint-dylint.nix  rust-wasm.nix  rust.nix  stac.nix  ubs.nix
