[package]
name = "pureflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Core traits and runtime contracts for implementing Pureflow nodes: NodeExecutor, ports, messages, and errors"

[dependencies]
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
asupersync.workspace = true
bytes.workspace = true
pureflow-types.workspace = true
pureflow-workflow.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true
quickcheck.workspace = true

[features]
default = []
arrow = ["dep:arrow-array", "dep:arrow-schema"]

[[bench]]
name = "metadata_overhead"
harness = false

[lints]
workspace = true
