[package]
name = "pureflow-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "High-level workflow orchestration, run policies, and node registries for the Pureflow workflow engine"

[dependencies]
pureflow-contract.workspace = true
pureflow-core.workspace = true
pureflow-runtime.workspace = true
pureflow-types.workspace = true
pureflow-workflow.workspace = true
futures.workspace = true

[dev-dependencies]
pureflow-test-kit.workspace = true
pureflow-rules.workspace = true
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "backpressure_capacity"
harness = false

[lints]
workspace = true
