[package]
name = "pureflow-introspection"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Read-only workflow introspection projections with optional JSON serialization for Pureflow"

[dependencies]
pureflow-contract.workspace = true
pureflow-core.workspace = true
pureflow-types.workspace = true
pureflow-workflow.workspace = true
serde_json = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde_json"]

[dev-dependencies]
pureflow-test-kit.workspace = true
insta.workspace = true

[lints]
workspace = true
