[package]
name = "pureflow-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Asupersync-backed async runtime for single-node execution in the Pureflow workflow engine"

[dependencies]
asupersync.workspace = true
pureflow-core.workspace = true
tracing = { workspace = true, optional = true }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
pureflow-test-kit.workspace = true
futures.workspace = true

[lints]
workspace = true
