[package]
name = "pureflow-test-kit"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Test builders, property strategies, and test doubles for testing Pureflow node implementations"

[dependencies]
pureflow-core.workspace = true
pureflow-types.workspace = true
pureflow-workflow.workspace = true
proptest.workspace = true

[dev-dependencies]
pureflow-runtime.workspace = true

[lints]
workspace = true
