[package]
name = "pureflow-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Wasmtime-backed WebAssembly batch node execution adapter for the Pureflow workflow engine"

[dependencies]
pureflow-core.workspace = true
pureflow-rules.workspace = true
pureflow-types.workspace = true
bytes.workspace = true
serde_json.workspace = true
wasmtime.workspace = true

[dev-dependencies]
pureflow-engine.workspace = true
pureflow-workflow.workspace = true
futures.workspace = true
quickcheck.workspace = true
serde.workspace = true
wit-bindgen.workspace = true
wit-parser = "0.247"

[lints]
workspace = true
