[package]
name = "pureflow-workflow-format"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Workflow definition parsers for Pureflow: JSON (always), TOML and YAML behind optional features"

[dependencies]
pureflow-rules = { workspace = true, features = ["serde"] }
pureflow-types.workspace = true
pureflow-workflow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
default = []
toml = ["dep:toml"]
yaml = ["dep:serde_yml"]

[dev-dependencies]
quickcheck.workspace = true
tempfile = "3"

[lints]
workspace = true
