[package]
name = "pureflow"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "A flow-based programming (FBP) workflow engine for building concurrent data pipelines"
keywords = ["workflow", "fbp", "pipeline", "dataflow", "async"]
categories = ["concurrency", "asynchronous"]
readme = "README.md"

[dependencies]
pureflow-contract.workspace = true
pureflow-core.workspace = true
pureflow-engine.workspace = true
pureflow-runtime.workspace = true
pureflow-types.workspace = true
pureflow-workflow.workspace = true
pureflow-workflow-format.workspace = true
pureflow-introspection = { workspace = true, optional = true }
pureflow-wasm = { workspace = true, optional = true }

[features]
default = []
wasm = ["dep:pureflow-wasm"]
introspection = ["dep:pureflow-introspection", "pureflow-introspection/serde"]
tracing = ["pureflow-runtime/tracing"]
arrow = ["pureflow-core/arrow"]
toml = ["pureflow-workflow-format/toml"]
yaml = ["pureflow-workflow-format/yaml"]
full = ["wasm", "introspection", "tracing", "arrow", "toml", "yaml"]

[lints]
workspace = true
